--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "url": "https://github.com/tms-js-pro-2021/Tarankevich-Diplom/issues"
   },
   "homepage": "https://github.com/tms-js-pro-2021/Tarankevich-Diplom#readme",
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "style-loader": "^3.2.1",
+    "styled-components": "^5.3.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
@@ -27,6 +33,7 @@
     "jest": "^27.1.0",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.0"
+    "webpack-dev-server": "^4.1.0",
+    "css-loader": "^6.2.0"
   }
 }
