--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/tms-js-pro-2021/Tarankevich-Diplom#readme",
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "style-loader": "^3.2.1",
     "styled-components": "^5.3.0"
   },
