--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.3.0",
     "style-loader": "^3.2.1",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
