--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "redux": "^4.1.1",
+    "redux-react-session": "^2.6.1",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^3.2.1",
     "styled-components": "^5.3.0",
     "yup": "^0.32.9"
