--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/tms-js-pro-2021/Tarankevich-Diplom#readme",
   "dependencies": {
+    "axios": "^0.21.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
