--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/tms-js-pro-2021/Tarankevich-Diplom#readme",
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
