--- a/package.json
+++ b/package.json
@@ -41,11 +41,17 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-react": "^7.14.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
     "jest": "^27.1.0",
+    "prettier": "2.4.1",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.0",
-    "css-loader": "^6.2.0"
+    "webpack-dev-server": "^4.1.0"
   }
 }
