--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux-thunk": "^2.3.0",
     "style-loader": "^3.2.1",
     "styled-components": "^5.3.0",
+    "uuid": "^8.3.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
