--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack serve --mode development",
     "build": "webpack build --mode production",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint src/**/*.{js,jsx}"
   },
   "repository": {
     "type": "git",
