--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-react-session": "^2.6.1",
     "redux-thunk": "^2.3.0",
     "style-loader": "^3.2.1",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9",
-    "redux-devtools-extension": "^2.13.9"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
